--- a/ansible/install-docker.yml
+++ b/ansible/install-docker.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install and configure Docker
+- name: Install Docker from Ubuntu repo
   hosts: localhost
   become: yes
   connection: local
@@ -8,43 +8,11 @@
     - name: Update apt cache
       apt:
         update_cache: yes
-        cache_valid_time: 3600
 
-    - name: Install required dependencies
+    - name: Install docker.io
       apt:
-        name: "{{ item }}"
+        name: docker.io
         state: present
-      loop:
-        - apt-transport-https
-        - ca-certificates
-        - curl
-        - software-properties-common
-        - gnupg
-        - lsb-release
-
-    - name: Add Docker GPG key
-      ansible.builtin.shell: |
-        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-      args:
-        warn: false
-
-    - name: Add Docker repository
-      copy:
-        dest: /etc/apt/sources.list.d/docker.list
-        content: |
-          deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-
-    - name: Update apt cache after adding repo
-      apt:
-        update_cache: yes
-
-    - name: Install Docker CE and CLI
-      apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-        state: latest
 
     - name: Ensure Docker service is started
       service:
