--- a/ansible/install-puppet.yml
+++ b/ansible/install-puppet.yml
@@ -8,31 +8,14 @@
     - name: Update apt cache
       apt:
         update_cache: yes
-        cache_valid_time: 3600
-
-    - name: Install dependencies
-      apt:
-        name: "{{ item }}"
-        state: present
-      loop:
-        - wget
-        - lsb-release
-        - ca-certificates
-
-    - name: Download Puppet agent package
-      get_url:
-        url: "https://apt.puppet.com/puppet7-release-{{ ansible_distribution_release }}.deb"
-        dest: /tmp/puppet-release.deb
-
-    - name: Install Puppet repository package
-      apt:
-        deb: /tmp/puppet-release.deb
-
-    - name: Update apt cache again after repo install
-      apt:
-        update_cache: yes
 
     - name: Install Puppet agent
       apt:
-        name: puppet-agent
+        name: puppet
         state: present
+
+    - name: Ensure Puppet service is started
+      service:
+        name: puppet
+        state: started
+        enabled: yes
